--- a/paper_repo/compute_model_likelihoods_preprocessing.Rmd
+++ b/paper_repo/compute_model_likelihoods_preprocessing.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "preprocess"
+title: "Preprocess data for model-based likelihood analysis"
 output: html_document
 ---
 
 ```{r, include=FALSE, echo=FALSE}
-knitr::opts_chunk$set(echo = TRUE,fig.width=4, fig.height=3,fig.align = "center",cache=TRUE)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, fig.width=4, fig.height=3,fig.align = "center", cache=TRUE)
 library(ggplot2)
 library(reshape)
 library(grid)
@@ -18,256 +18,154 @@ library(patchwork)
 library(readr)
 library(knitr)
 library(ggbeeswarm)
-library(cowplot)
-library(boot)
 
+
+sm <- 1e-10
+  
 preprocess_df_human <- function(df) {
-  sm <- 1e-10
-  df$id <- seq_len(nrow(df))
+  df$id <- seq.int(1, nrow(df))
   df <- df[order(df$tpt),] %>%
-      rename(pred_x = response_x, pred_y = response_y, func.name = seq_id, subj_id = subject_id) %>%
+        rename(pred_x = response_x, pred_y = response_y,
+               func.name = seq_id, subj_id = subject_id) %>%
       mutate(r_id = subj_id) %>%
-      group_by(subj_id, trial_idx, tpt) %>%
-      mutate(true_dist=((true_x-prev_x)**2. + (true_y-prev_y)**2.)**0.5) %>%
-      mutate(err_x=pred_x-true_x) %>%
-      mutate(err_y=pred_y-true_y) %>%
-      mutate(norm_err_x = err_x/(true_dist+sm)) %>%
-      mutate(norm_err_y = err_y/(true_dist+sm)) %>%
-      mutate(abs_err = ((err_x**2)+(err_y**2)) **0.5) %>%  
-      mutate(abs_rel_err = abs_err/(true_dist)) %>%
-      mutate(dist_from_prev = (((pred_x-true_x)**2)+((pred_y-true_y)**2)) **0.5) %>%
-      ungroup() %>%
-      mutate(scaled_err = scale(abs_rel_err)[,1]) %>%
-      rename(n=tpt)
+      group_by(subj_id, trial_idx, tpt)
   return(df)
 }
 
 preprocess_df_monkey <- function(df) {
-  df$id <- seq_len(nrow(df))
+  df$id <- seq.int(1, nrow(df))
   df <- df[order(df$n),] %>%
       rename(true_x=x_next, true_y=y_next,
              prev_x=x_curr, prev_y=y_curr,
              pred_x=x_pred,  pred_y=y_pred, 
-             subj_id=monkey_name, func.name=func_id) %>%
-      mutate(func.name=ifelse(func.name=="example_line", "line", func.name)) %>%
-    
-      group_by(r_id, game_n, n) %>%
-      mutate(true_dist=((true_x-prev_x)**2. + (true_y-prev_y)**2.)**0.5) %>%
-      mutate(err_x=pred_x-true_x) %>%
-      mutate(err_y=pred_y-true_y) %>%
-      mutate(abs_err = ((err_x**2)+(err_y**2)) **0.5) %>%  
-      mutate(abs_rel_err = abs_err/(true_dist)) %>%
-      mutate(dist_from_prev = (((pred_x-true_x)**2)+((pred_y-true_y)**2)) **0.5) %>%
-      ungroup()
+             subj_id=monkey_name, func.name=func_id,
+             tpt=n)
   return(df)
 }
 
-get_ll <- function(df) {
-  logsumexp <- function(x) {
-    max_x <- max(x)
-    max_x + log(sum(exp(x - max_x)))
-  }
-  df <- df %>%
-    group_by(tpt, seq_id) %>%
-    mutate(norm = logsumexp(score)) %>%
-    ungroup() %>%
-    mutate(posterior = exp(score - norm)) 
-  return(df)
+logsumexp <- function(x) {
+  max_x <- max(x)
+  max_x + log(sum(exp(x - max_x)))
 }
 
-preprocess_model <- function(df_model) {
-  df_model$id <- seq.int(1,nrow(df_model))
+
+preprocess_df_model <- function(df_model) {
+  df_model$id <- seq.int(1, nrow(df_model))
   df_model <- df_model %>%
-        get_ll() %>%
-        rename(func.name = seq_id, n = tpt) %>%
-        rowwise() %>%
-        mutate(std_x = sd_x) %>%
-        mutate(std_y = sd_y) %>%
-        mutate(err_x = pred_x - true_x) %>%
-        mutate(err_y = pred_y - true_y) %>%
-        group_by(func.name) %>%
-        mutate(range_x = max(true_x) - min(true_x)) %>%
-        mutate(range_y = max(true_y) - min(true_y)) %>%
-        mutate(mean_x = mean(true_x)) %>%
-        mutate(mean_y = mean(true_y)) %>%
-        group_by(func.name, particle) %>%
-        arrange(n) %>%
-        mutate(prev_x = lag(true_x), prev_y = lag(true_y)) %>%
-        mutate(
-          true_x_prev1 = lag(true_x, 1),
-          true_x_prev2 = lag(true_x, 2),
-          true_y_prev1 = lag(true_y, 1),
-          true_y_prev2 = lag(true_y, 2)
-        ) %>%
-        ungroup() %>%
-        mutate(pred_x_lin = ifelse(is.na(true_x_prev2), true_x_prev1, true_x_prev1 + (true_x_prev1 - true_x_prev2)),
-               pred_y_lin = ifelse(is.na(true_y_prev2), true_y_prev1, true_y_prev1 + (true_y_prev1 - true_y_prev2))) %>%
-        mutate(true_dist=((true_x-prev_x)**2. + (true_y-prev_y)**2.)**0.5) %>%
-        mutate(err_x=pred_x-true_x) %>%
-        mutate(err_y=pred_y-true_y) %>%
-        mutate(abs_err = ((err_x**2)+(err_y)**2) **0.5) %>%  
-        mutate(abs_rel_err = abs_err/(true_dist)) %>%
-        group_by(func.name, n) %>%
-        mutate(norm_abs_rel_err = sum(abs_rel_err * posterior, na.rm=T))
+              group_by(tpt, seq_id) %>%
+              mutate(norm = logsumexp(score)) %>%
+              ungroup() %>%
+              mutate(posterior = exp(score - norm)) %>%
+              rename(func.name = seq_id) %>%
+              rowwise() %>%
+              mutate(std_x = sd_x) %>%
+              mutate(std_y = sd_y) %>%
+              group_by(func.name, particle) %>%
+              arrange(tpt) %>%
+              mutate(prev_x = lag(true_x), prev_y = lag(true_y)) %>%
+              ungroup()
   
   return(df_model)
 }
 
-# Each particle assigns some probability mass to each previous point and linear extrapolation
-# Split these into multiple particles, whose probabilities sum to particle probability
-preprocess_model_lin_or_prev <- function(df_model) {
-  df_model$id <- seq.int(1,nrow(df_model))
+preprocess_df_linear_or_prev <- function(df_model) {
+  # Split particle probability mass between periodic and linear predictions
+  df_model <- df_model %>%
+              rename(func.name = seq_id)
   
   prev_pt_df <- df_model %>%
-             rename(func.name = seq_id, n = tpt) %>%
-             group_by(func.name, n) %>%
-             summarize(true_x = mean(true_x),
-                       true_y = mean(true_y),
-                       .groups="drop") %>%
-             arrange(n) %>%
-             mutate(prev_x = lag(true_x), prev_y = lag(true_y)) %>%
-             select(-c("true_x", "true_y"))
-  
+                group_by(func.name, tpt) %>%
+                summarize(true_x = mean(true_x),
+                          true_y = mean(true_y),
+                          .groups="drop") %>%
+                arrange(tpt) %>%
+                mutate(prev_x = lag(true_x), prev_y = lag(true_y)) %>%
+                select(-c("true_x", "true_y"))
 
-  df_model <- df_model %>% mutate(prob = exp(score))
   df_grouped <- df_model %>%
-                group_by(seq_id, tpt, particle) %>%
-                summarize(prob = mean(prob), .groups = 'drop') %>%
-                group_by(seq_id, tpt) %>%
-                mutate(posterior = prob / sum(prob)) %>%
+                mutate(posterior = exp(score)) %>%
+                distinct(func.name, tpt, particle, posterior) %>%
+                group_by(func.name, tpt) %>%
+                mutate(posterior = posterior / sum(posterior)) %>%
                 ungroup()
-  df_model <- df_model %>% left_join(df_grouped %>% select(seq_id, tpt, particle, posterior), by = c("seq_id", "tpt", "particle"))
+  
+  df_model <- df_model %>%
+              left_join(df_grouped %>% select(func.name, tpt, particle, posterior),
+                        by = c("func.name", "tpt", "particle"))
 
   df_model <- df_model %>%
-        rename(func.name = seq_id, n = tpt) %>%
-        # expand particles based on assignment of probability mass to prev points and linear extrapolation
-        group_by(func.name, n) %>%
-        mutate(new_particle = paste0(particle, "_", row_number())) %>%
-        mutate(particle = as.integer(factor(new_particle))) %>%
+              group_by(func.name, tpt) %>%
+              mutate(expanded_particle = paste0(particle, "_", row_number())) %>%
+              mutate(particle = as.integer(factor(expanded_particle))) %>%
+              mutate(pred_x = mean_x, pred_y = mean_y) %>%
+              group_by(func.name, tpt, particle) %>%
+              mutate(sd_x = ifelse(is_periodic, sd_periodic_x, sd_vec_x),
+                     sd_y = ifelse(is_periodic, sd_periodic_y, sd_vec_y)) %>%
+              ungroup() %>%
+              rowwise() %>%
+              mutate(posterior = posterior * component_weight) %>%
+              mutate(std_x = sd_x) %>%
+              mutate(std_y = sd_y) %>%
+              merge(prev_pt_df, by=c("func.name", "tpt"))
         
-        mutate(pred_x = means_x,
-               pred_y = means_y) %>%
-        group_by(func.name, n, particle) %>%
-        mutate(sd_x = ifelse(is_periodic, sd_periodic_x, sd_vec_x),
-               sd_y = ifelse(is_periodic, sd_periodic_y, sd_vec_y)) %>%
-        ungroup() %>%
-        rowwise() %>%
-        mutate(posterior = posterior * weights) %>%
-        mutate(std_x = sd_x) %>%
-        mutate(std_y = sd_y) %>%
-        mutate(err_x = pred_x - true_x) %>%
-        mutate(err_y = pred_y - true_y) %>%
-        group_by(func.name) %>%
-        mutate(range_x = max(true_x) - min(true_x)) %>%
-        mutate(range_y = max(true_y) - min(true_y)) %>%
-        mutate(mean_x = mean(true_x)) %>%
-        mutate(mean_y = mean(true_y)) %>%
-        merge(prev_pt_df, by=c("func.name", "n")) %>%
-        mutate(true_dist=((true_x-prev_x)**2. + (true_y-prev_y)**2.)**0.5) %>%
-        mutate(err_x=pred_x-true_x) %>%
-        mutate(err_y=pred_y-true_y) %>%
-        mutate(abs_err = ((err_x**2)+(err_y)**2) **0.5) %>%  
-        mutate(abs_rel_err = abs_err/(true_dist)) %>%
-        group_by(func.name, n) %>%
-        mutate(norm_abs_rel_err = sum(abs_rel_err * posterior, na.rm=T)) %>%
-        mutate(pred_x_lin = 0,
-               pred_y_lin = 0)
-  
   return(df_model)
 }
 
 
-# For each function, compute the mapping from transformer coords to reference coords
-# Given ref points at r1 and r2, and og points at t1 and t2, r1-r2
-# r1 = m(t1) + b
-# r2 = m(t2) + b
-# r1 - m(t1) = r2 - m(t2)
-# r1 - r2 = m(t1) - m(t2)
-# m = (r1-r2)/(t1-t2)
-# b = r1 - m(t1)
-scale_transformer <- function(df_transformer) {
-  df_ref <- preprocess_df_human(read.csv("../data/participants/adults.csv")) %>%
-          group_by(func.name, n) %>%
-          summarize(ref_true_x = mean(true_x),
-                    ref_true_y = mean(true_y),
-                    .groups="drop")
+preprocess_df_transformer <- function(df_transformer) {
+  # For each function, compute the mapping from transformer coords to reference coords
+  df_ref <- preprocess_df_human(read.csv(paste0(data_dir, "participants/adults.csv"))) %>%
+            group_by(func.name, tpt) %>%
+            summarize(ref_true_x = mean(true_x),
+                      ref_true_y = mean(true_y),
+                      .groups="drop")
 
   df_transformer <- df_transformer %>%
-        mutate(n = n+1) %>%
-        merge(df_ref, by=c("func.name", "n")) %>%
-        group_by(func.name) %>%
-        mutate(
-          t1x = min(true_x),
-          t2x = max(true_x),
-          r1x = min(ref_true_x),
-          r2x = max(ref_true_x),
-          mx = ifelse(t2x==t1x, 1, (r2x-r1x)/(t2x-t1x)),
-          bx = r1x - mx*t1x,
-          t1y = min(true_y),
-          t2y = max(true_y),
-          r1y = min(ref_true_y),
-          r2y = max(ref_true_y),
-          # assumes t1x != t2x
-          my = ifelse(t2y==t1y, mx, (r2y-r1y)/(t2y-t1y)),
-          by = r1y - my*t1y
-        ) %>%
-        rowwise() %>%
-        mutate(true_x = true_x * mx + bx,
-               pred_x = pred_x * mx + bx,
-               std_x = std_x * mx,
-               true_y = true_y * my + by,
-               pred_y = pred_y * my + by,
-               std_y = std_y * my, # when dy is 0, this will not be scaled 
-               )
+                    preprocess_df_model() %>%
+                    merge(df_ref, by=c("func.name", "tpt")) %>%
+                    group_by(func.name) %>%
+                    mutate(
+                      t1x = min(true_x), t2x = max(true_x),
+                      r1x = min(ref_true_x), r2x = max(ref_true_x),
+                      mx = ifelse(t2x==t1x, 1, (r2x-r1x)/(t2x-t1x)),
+                      bx = r1x - mx*t1x,
+                      t1y = min(true_y), t2y = max(true_y),
+                      r1y = min(ref_true_y), r2y = max(ref_true_y),
+                      my = ifelse(t2y==t1y, mx, (r2y-r1y)/(t2y-t1y)),
+                      by = r1y - my*t1y
+                    ) %>%
+                    rowwise() %>%
+                    mutate(true_x = true_x * mx + bx,
+                           pred_x = pred_x * mx + bx,
+                           std_x = std_x * mx,
+                           true_y = true_y * my + by,
+                           pred_y = pred_y * my + by,
+                           std_y = std_y * my)
   return(df_transformer)
 }
 
+data_dir <- "data/"
+preprocessed_data_dir <- "preprocessed_data/"
 ```
 
 # Load participant data
 ```{r}
-df_adult <- preprocess_df_human(read.csv("../data/participants/adults.csv"))
-df_kid <- preprocess_df_human(read.csv("../data/participants/kids.csv"))
-df_monkey <- preprocess_df_monkey(read.csv("../data/participants/monkeys_all.csv"))
-df_kid_chs <- preprocess_df_human(read.csv("../data/participants/kids_chs.csv"))
+df_adult <- preprocess_df_human(read.csv(paste0(data_dir, "participants/adults.csv")))
+df_kid <- preprocess_df_human(read.csv(paste0(data_dir, "participants/kids.csv")))
+df_monkey <- preprocess_df_monkey(read.csv(paste0(data_dir, "participants/monkeys.csv")))
 ```
-
-# Load model paths
-```{r}
-lot_path <- '../data/models/lot.csv'
-lot_no_recursion_path <- '../data/models/lot_no_recursion.csv'
-gpnc_path <- '../data/models/gpnc.csv'
-gpnc_fixed_path <- '../data/models/gpnc_fixed.csv'
-gpsl_path <- '../data/models/gpsl.csv'
-ridge_path <- '../data/models/ridge.csv'
-lin_path <- '../data/models/linear.csv'
-lin_1_path <- '../data/models/linear_1.csv'
-lin_prev_path <- '../data/models/lin_or_prev.csv'
-transformer_1_path <- '../data/models/transformer_1.csv'
-transformer_2_path <- '../data/models/transformer_2.csv'
-transformer_3_path <- '../data/models/transformer_3.csv'
-transformer_4_path <- '../data/models/transformer_4.csv'
-transformer_5_path <- '../data/models/transformer_5.csv'
-transformer_6_path <- '../data/models/transformer_6.csv'
-transformer_8_path <- '../data/models/transformer_8.csv'
-transformer_10_path <- '../data/models/transformer_10.csv'
-transformer_13_path <- '../data/models/transformer_13.csv'
-```
-
-
-# Likelihood based analyses
-# Save preprocessed data for use in lik_model_comparison.py
+# Save preprocessed test data for scipy parameter fitting
 ```{r, message = False}
 get_model_data <- function(df_model, s_id, t,  model_type) {
   s_id <- as.character(s_id[1])
   t <- t[1]
-  df_use <- subset(df_model, (df_model$n==t) & (as.character(df_model$func.name) == as.character(s_id)))
-    if (nrow(df_use) == 0) {
+  df_use <- subset(df_model,
+                   (df_model$tpt==t) & (as.character(df_model$func.name) == as.character(s_id)))
+  if (nrow(df_use) == 0) {
     return(NA) 
   } else {
     return(list(df_use$pred_x, df_use$pred_y,
                 df_use$std_x, df_use$std_y,
-                df_use$pred_x_lin, df_use$pred_y_lin,
                 df_use$posterior, df_use$particle))
   }
 }
@@ -279,21 +177,20 @@ add_new_columns_grouped <- function(df, df_model, func, group_cols, model_type, 
   df_expanded <- df %>% 
     slice(rep(1:n(), n_particle)) %>%
     group_by(id) %>%
-    mutate(particle = rep(1:n_particle))
-  df_expanded %>%
+    mutate(particle = rep(1:n_particle)) %>%
     group_by(across(all_of(group_cols))) %>%
-    summarize(result = list(func(df_model, func.name, n, model_type)), .groups = 'drop') %>%
+    summarize(result = list(func(df_model, func.name, tpt, model_type)), .groups = 'drop') %>%
     unnest_wider(result, names_sep = "_") %>%
     setNames(., c(group_cols, new_col_names)) %>%
     left_join(df, by = group_cols) 
 }
 
 get_df_participant_model <- function(df_participant, df_model) {
-  df_participant_model <- add_new_columns_grouped(df_participant, df_model, get_model_data, c("func.name", "n"), "model",
+  df_participant_model <- add_new_columns_grouped(df_participant, df_model, get_model_data, c("func.name", "tpt"), "model",
                           c("model_pred_x", "model_pred_y", "model_std_x", "model_std_y",
-                            "pred_x_lin", "pred_y_lin", "model_posterior", "model_particle")) %>%
+                             "model_posterior", "model_particle")) %>%
                           unnest(model_pred_x, model_pred_y, model_std_x, model_std_y,
-                                 pred_x_lin, pred_y_lin, model_posterior, model_particle) %>%
+                                 model_posterior, model_particle) %>%
                           group_by(func.name) %>%
                           mutate(min_x = mean(min_x, na.rm=T), min_y = mean(min_y, na.rm=T),
                                  max_x = mean(max_x, na.rm=T), max_y = mean(max_y, na.rm=T)) %>%
@@ -303,61 +200,52 @@ get_df_participant_model <- function(df_participant, df_model) {
                           mutate(model_pred_y = ifelse(is.na(model_pred_y), NA,
                                                        max(min(model_pred_y, max_y, na.rm=T), min_y, na.rm=T))) %>% 
                           ungroup() %>%
-                          mutate(scale_by = (max_x-min_x)) %>%
-                          mutate(pred_x = (pred_x-min_x)/scale_by) %>%
-                          mutate(pred_y = (pred_y-min_y)/scale_by) %>%
-                          mutate(prev_x = (prev_x-min_x)/scale_by) %>%
-                          mutate(prev_y = (prev_y-min_y)/scale_by) %>%
-                          mutate(true_x = (true_x-min_x)/scale_by) %>%
-                          mutate(true_y = (true_y-min_y)/scale_by) %>%
-                          mutate(pred_x_lin = (pred_x_lin-min_x)/scale_by) %>%
-                          mutate(pred_y_lin = (pred_y_lin-min_y)/scale_by) %>%
-                          mutate(model_pred_x = (model_pred_x-min_x)/scale_by) %>%
-                          mutate(model_pred_y = (model_pred_y-min_y)/scale_by) %>%
-                          mutate(model_std_x = (model_std_x)/scale_by) %>%
-                          mutate(model_std_y = (model_std_y)/scale_by) %>%
-                          mutate(max_y_tmp = (max_y-min_y)/scale_by,
-                                 min_x_tmp = (min_x-min_x)/scale_by,
-                                 max_x_tmp = (max_x-min_x)/scale_by,
-                                 min_y_tmp = (min_y-min_y)/scale_by) %>%
-                          mutate(max_x=max_x_tmp, min_x=min_x_tmp, max_y=max_y_tmp, min_y=min_y_tmp)
+                          rowwise() %>%
+                          mutate(range_x = (max_x-min_x),
+                                 range_y = (max_y-min_y),
+                                 range_xy = max(range_x, range_y),
+                                 pred_x = (pred_x-min_x)/range_xy,
+                                 pred_y = (pred_y-min_y)/range_xy,
+                                 prev_x = (prev_x-min_x)/range_xy,
+                                 prev_y = (prev_y-min_y)/range_xy,
+                                 true_x = (true_x-min_x)/range_xy,
+                                 true_y = (true_y-min_y)/range_xy,
+                                 model_pred_x = (model_pred_x-min_x)/range_xy,
+                                 model_pred_y = (model_pred_y-min_y)/range_xy,
+                                 model_std_x = (model_std_x)/range_xy,
+                                 model_std_y = (model_std_y)/range_xy,
+                                 max_x = (max_x-min_x)/range_xy,
+                                 max_y = (max_y-min_y)/range_xy,
+                                 min_x = (min_x-min_x)/range_xy,
+                                 min_y = (min_y-min_y)/range_xy)
   return (df_participant_model)
 }
 
 write_preprocessed_data <- function() {
-  path <- "preprocessed_data/"
-  model_paths <- list("lot"=lot_path, "lot_no_recursion"=lot_no_recursion_path, "gpnc_fixed"=gpnc_fixed_path, "gpnc"=gpnc_path, "gpsl"=gpsl_path, "ridge"=ridge_path, "lin"=lin_path, "lin_1"=lin_1_path, "lot_no_recursion"=lot_no_recursion_path, "lin_prev"=lin_prev_path, "transformer_1"=transformer_1_path,  "transformer_2"=transformer_2_path, "transformer_3"=transformer_3_path, "transformer_4"=transformer_4_path, "transformer_5"=transformer_5_path, "transformer_6"=transformer_6_path, "transformer_8"=transformer_8_path, "transformer_10"=transformer_10_path, "transformer_13"=transformer_13_path)
-  models = c("transformer_1", "transformer_4", "transformer_5", "transformer_6", "transformer_8", "transformer_10", "transformer_2", "transformer_3", "transformer_13", "lot", "lot_no_recursion", "lin_prev", "gpnc", "gpsl", "ridge", "lin")
-  participants = c('kid_chs')#, 'adult')#, #, "kid", "monkey")
+  models = c("lot", "lot_nonrecursive", "linear_or_prev", "gp", "comp_gp", "ridge", "linear", "transformer_1", "transformer_4", "transformer_5", "transformer_6", "transformer_8", "transformer_10", "transformer_2", "transformer_3", "transformer_13")
+  participants = c('kids', 'adults', "monkeys")
   for (i in seq_along(models)) {
     model_name <- models[i]
-    model_path <- model_paths[[model_name]]
-    if (model_name == "lin_prev") {
-      df_model <- preprocess_model_lin_or_prev(read.csv(model_path))
-    } else if (model_name %in% c("transformer_1", "transformer_4", "transformer_5", "transformer_6", "transformer_8", "transformer_10", "transformer_2", "transformer_3", "transformer_13")) {
-      df_model <- preprocess_model(read.csv(model_path)) %>%
-                  scale_transformer()
+    model_path <- paste0(data_dir, "models/", model_name, ".csv")
+    if (model_name == "linear_or_prev") {
+      df_model <- preprocess_df_linear_or_prev(read.csv(model_path))
+    } else if (grepl("transformer", model_name)) {
+      df_model <- preprocess_df_transformer(read.csv(model_path))
     } else {
-      df_model <- preprocess_model(read.csv(model_path))
+      df_model <- preprocess_df_model(read.csv(model_path))
     }
     for (j in seq_along(participants)) {
-      if (participants[j] == 'adult') {
-         df_participant <- preprocess_df_human(read.csv("../data/participants/adults.csv"))
-      } else if (participants[j] == 'kid') {
-         df_participant <- preprocess_df_human(read.csv("../data/participants/kid.csv"))
-      } else if (participants[j] == 'monkey') {
-          print("monkeys")
-         df_participant <- preprocess_df_monkey(read.csv("../data/participants/monkeys_all.csv"))
-      } else if (participants[j] == 'kid_chs') {
-         df_participant <- preprocess_df_human(read.csv("../data/participants/kids_chs.csv")) #%>%
-                            #filter(!(func.name %in% c("123", "decreasing_y", "radial_increasing")))
+      if (participants[j] == 'adults') {
+      df_participant <- preprocess_df_human(read.csv(paste0(data_dir, "participants/adults.csv")))
+      } else if (participants[j] == 'kids') {
+         df_participant <- preprocess_df_human(read.csv(paste0(data_dir, "participants/kids.csv")))
+      } else if (participants[j] == 'monkeys') {
+         df_participant <- preprocess_df_monkey(read.csv(paste0(data_dir, "participants/monkeys.csv")))
       }
-      print(model_name)
-      print(participants[j])
-      
+
       df_participant_model <- get_df_participant_model(df_participant, df_model)
       print(length(unique(df_participant_model$func.name)))
-      out_file <- paste(path, model_name, "_", participants[j], ".csv", sep="")
+      out_file <- paste(preprocessed_data_dir, "model_likelihoods/preprocessing/", model_name, "_", participants[j], ".csv", sep="")
       write.csv(df_participant_model, out_file)
     }
   }
@@ -365,25 +253,24 @@ write_preprocessed_data <- function() {
 
 write_preprocessed_data()
 
+
+
 ```
 
-
-# Preprocess data for monkey training transformer likelihood analysis
+# Save preprocessed monkey training data for scipy parameter fitting
 ```{r}
 write_preprocessed_data_monkey_training <- function() {
-  path <- "preprocessed_data/monkey_training/"
-  df_participant <- read.csv("../data/participants/monkey_training/train.csv") %>%
-                  filter(attempt_number==1) %>%
-                  mutate(n=n+1) %>%
-                  preprocess_df_monkey() %>%
-                  mutate(min_x=0,
-                         min_y=0,
-                         max_x=screen_w,
-                         max_y=screen_h)
-  for (i in c(8, 10, 13)) {
-    df_model <- read.csv(paste0("../data/models/monkey_training/context_len_", i, ".csv")) %>%
-                mutate(n=n+1,
-                       score=1,
+  df_participant <- read.csv(paste0(data_dir, "participants/monkeys_train.csv")) %>%
+                    filter(attempt_number==1) %>%
+                    preprocess_df_monkey() %>%
+                    mutate(min_x=0,
+                           min_y=0,
+                           max_x=screen_w,
+                           max_y=screen_h)
+  
+  for (i in c(1,2,3,4,5,6,8,10,13)) {
+    df_model <- read.csv(paste0(data_dir, "models/monkey_training/transformer_", i, ".csv")) %>%
+                mutate(score=1,
                        weight=1,
                        particle=0) %>%
                 filter(mode=="train") %>%
@@ -392,11 +279,13 @@ write_preprocessed_data_monkey_training <- function() {
                        pred_x=x_pred,  pred_y=y_pred,
                        seq_id = func_id, tpt=n,
                        sd_x = x_std, sd_y = y_std) %>%
-                preprocess_model() 
+                preprocess_df_model() 
                 
-    df_participant_model <- get_df_participant_model(df_participant, df_model)
+    df_participant_model <- get_df_participant_model(df_participant, df_model) %>%
+                            mutate(tpt=tpt+1)
+    
     print(length(unique(df_participant_model$func.name)))
-    out_file <- paste0(path, "transformer_", i, "_monkey.csv")
+    out_file <- paste0(preprocessed_data_dir,"model_likelihoods/monkey_training/preprocessing/", "transformer_", i, "_monkeys_train.csv")
     write.csv(df_participant_model, out_file)
   }
 }
